--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,15 @@
+// {
+//   "compilerOptions": {
+//     "target": "ES6",
+//     "module": "CommonJS",
+//     "outDir": "./dist",
+//     "rootDir": "./src",
+//     "strict": true,
+//     "esModuleInterop": true
+//   }
+// }
+
+
 {
   "compilerOptions": {
     "target": "ES6",
@@ -5,6 +17,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,   // ✅ Add this
+    "skipLibCheck": true         // ✅ Optional but recommended
   }
 }
